# cinemory

./: .coverage  .env.example  .firebaserc  .gcloudignore  .gitattributes  .gitignore  .gitleaks.toml  Dockerfile  README.md  ROADMAP.md  firebase.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  firebase-hosting.yml
demo/: STATE.md  SUBMISSION.md  build-video.py  capture-demo.sh  cinemory-demo.beats.json  cinemory-demo.en.srt  video-script.md
demo/video-assets/: cli.txt  contract.txt  health.txt  manifest.txt  reels.txt  tamper.txt
deploy/: CLOUDRUN.md  DEPLOYED.md  cloudbuild.yaml  deploy-cloudrun.sh
docs/: JUDGE_STATE_2026-07-13.md
frontend/: .env.example  README.md  index.html  lighthouserc.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/e2e/: a11y.spec.ts  journey.spec.ts  mocks.ts
frontend/scripts/: lh-server.mjs
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: ExampleReel.frames.test.tsx  ExampleReel.test.tsx  ExampleReel.tsx  Footer.test.tsx  Footer.tsx  HashChip.test.tsx  HashChip.tsx  Header.test.tsx  Header.tsx  Hero.test.tsx  Hero.tsx  HowItWorks.test.tsx  HowItWorks.tsx  KenBurnsSlideshow.tsx  ProvenancePanel.test.tsx  ProvenancePanel.tsx  ShareBar.actions.test.tsx  ShareBar.test.tsx  ShareBar.tsx  Stepper.test.tsx  Stepper.tsx  Studio.test.tsx  Studio.tsx  Wordmark.test.tsx  Wordmark.tsx
frontend/src/lib/: api.test.ts  api.ts  occasion-theme.ts  progress.test.ts  progress.ts  provenance-verify.test.ts  (+10 more)
sample-data/: README.md
scripts/: check_video.py  generate_demo.py  readiness.py
src/cinemory/: __init__.py  api.py  cli.py  config.py  ingest.py  keys.py  models.py  music.py  occasions.py  pipeline.py  ports.py  provenance.py  stitch.py  synthetic.py
tests/e2e/: test_end_to_end.py  test_parameterized.py  test_readiness_gate.py
tests/integration/: test_api.py  test_api_live_degrade.py  test_api_provider_degrade.py  test_api_verify.py  test_api_video.py  test_connectors.py  test_ffmpeg_stitch.py  test_genblaze_contract.py  test_load.py  test_pipeline.py
tests/security/: conftest.py  test_authz_abuse.py  test_injection_path_traversal.py  test_provenance_integrity.py  test_sensitive_data_exposure.py  test_ssrf_upload.py
tests/unit/: test_adapters_fakes.py  test_b2_client_construction.py  test_b2_config.py  test_b2_storage_index.py  test_ingest.py  test_keys.py  test_music.py  test_occasions.py  test_provenance.py  test_synthetic.py  test_verify_all.py
web/: index.html  package.json  tsconfig.json
web/src/: main.ts
(+33 files in other folders)
