[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cinemory"
version = "0.1.0"
description = "Synthetic photos -> AI-generated video reel, orchestrated with Genblaze, stored on Backblaze B2, with verifiable SHA-256 provenance."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "upgradedev" }]
dependencies = [
    "fastapi>=0.110",
    "pydantic>=2.6",
    "pillow>=10.2",
]

[project.optional-dependencies]
# Real generative-media orchestration (add credentials to use). The gmicloud
# extra pulls the GMICloud provider classes the adapter resolves; the genblaze
# metapackage brings genblaze-core + genblaze-s3 (the B2 ObjectStorageSink).
# boto3 backs Cinemory's own final-reel B2 storage.
live = [
    "genblaze[gmicloud]>=0.4,<0.5",
    "boto3>=1.34",
]
# Optional real audio analysis.
audio = ["librosa>=0.10", "numpy>=1.26"]
server = ["uvicorn>=0.29"]
# Opt-in live connectors (Google Photos Picker, YouTube, LinkedIn). The offline
# package and CI do NOT need this — connectors are tested via a fake transport.
connectors = ["requests>=2.31"]

[project.scripts]
cinemory = "cinemory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
